[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Scripts/Screen_Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/skin_assets/menu_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/tres_button/normal.tres" type="StyleBox" id=3]
[ext_resource path="res://Assets/tres_button/pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/tres_button/hover.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/windows/window.png" type="Texture" id=6]
[ext_resource path="res://Musics/wav/menu.wav" type="AudioStream" id=7]
[ext_resource path="res://Musics/sound effect/hower.wav" type="AudioStream" id=8]

[node name="Node2D" type="Node2D"]

[node name="Windows" type="Sprite" parent="."]
position = Vector2( 512, 360 )
scale = Vector2( 0.5, 0.5 )
z_index = -2
texture = ExtResource( 6 )

[node name="MenuButton" type="MenuButton" parent="."]
margin_left = 480.0
margin_top = 232.0
margin_right = 584.0
margin_bottom = 392.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MenuButton"]
margin_left = -48.0
margin_top = 40.0
margin_right = 88.0
margin_bottom = 272.0
custom_constants/separation = 26
alignment = 1

[node name="PlayButton" type="Button" parent="MenuButton/VBoxContainer"]
margin_top = 34.0
margin_right = 136.0
margin_bottom = 71.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.941176, 0.690196, 0.403922, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "PLAY"

[node name="Help_Button" type="Button" parent="MenuButton/VBoxContainer"]
margin_top = 97.0
margin_right = 136.0
margin_bottom = 134.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.941176, 0.690196, 0.403922, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "HELP"

[node name="Quit_Button" type="Button" parent="MenuButton/VBoxContainer"]
margin_top = 160.0
margin_right = 136.0
margin_bottom = 197.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.941176, 0.690196, 0.403922, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "QUIT"

[node name="Hover" type="AudioStreamPlayer" parent="MenuButton"]
stream = ExtResource( 8 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[connection signal="mouse_entered" from="MenuButton/VBoxContainer/PlayButton" to="MenuButton" method="_on_PlayButton_mouse_entered"]
[connection signal="pressed" from="MenuButton/VBoxContainer/PlayButton" to="MenuButton" method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="MenuButton/VBoxContainer/Help_Button" to="MenuButton" method="_on_Help_Button_mouse_entered"]
[connection signal="pressed" from="MenuButton/VBoxContainer/Help_Button" to="MenuButton" method="_on_Help_Button_pressed"]
[connection signal="mouse_entered" from="MenuButton/VBoxContainer/Quit_Button" to="MenuButton" method="_on_Quit_Button_mouse_entered"]
[connection signal="pressed" from="MenuButton/VBoxContainer/Quit_Button" to="MenuButton" method="_on_Quit_Button_pressed"]
